// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main snapshot renders with choicePrefix="letters" as default 1`] = `
<Fragment>
  <Component
    onConfirm={[Function]}
    open={false}
    text="There can't be less than 0 choices."
    title="Warning"
  />
  <WithStyles(Component)
    classes={Object {}}
    model={
      Object {
        "choiceMode": "checkbox",
        "choicePrefix": "letters",
        "choices": Array [
          Object {
            "correct": true,
            "feedback": Object {
              "type": "none",
              "value": "",
            },
            "label": "Sweden",
            "value": "sweden",
          },
          Object {
            "feedback": Object {
              "type": "none",
              "value": "",
            },
            "label": "Iceland",
            "value": "iceland",
          },
          Object {
            "feedback": Object {
              "type": "none",
              "value": "",
            },
            "label": "Norway",
            "value": "norway",
          },
          Object {
            "correct": true,
            "feedback": Object {
              "type": "none",
              "value": "",
            },
            "label": "Finland",
            "value": "finland",
          },
        ],
        "choicesLayout": "vertical",
        "configure": Object {},
        "feedbackEnabled": false,
        "gridColumns": 2,
        "lockChoiceOrder": true,
        "partialScoring": false,
        "prompt": "Which of these northern European countries are EU members?",
        "promptEnabled": true,
        "rationale": "",
        "rationaleEnabled": true,
        "scoringType": "auto",
        "selectedAnswerBackgroundColor": "initial",
        "studentInstructionsEnabled": true,
        "teacherInstructions": "",
        "teacherInstructionsEnabled": true,
        "toolbarEditorPosition": "bottom",
      }
    }
    onAddChoice={[Function]}
    onChangeModel={[Function]}
    onChoiceChanged={[Function]}
    onConfigurationChanged={[MockFunction]}
    onModelChanged={[MockFunction]}
    onPromptChanged={[Function]}
    onRemoveChoice={[Function]}
    onTeacherInstructionsChanged={[Function]}
  />
</Fragment>
`;

exports[`Main snapshot renders with choicePrefix="numbers" 1`] = `
<Fragment>
  <Component
    onConfirm={[Function]}
    open={false}
    text="There can't be less than 0 choices."
    title="Warning"
  />
  <WithStyles(Component)
    classes={Object {}}
    model={
      Object {
        "choiceMode": "checkbox",
        "choicePrefix": "numbers",
        "choices": Array [
          Object {
            "correct": true,
            "feedback": Object {
              "type": "none",
              "value": "",
            },
            "label": "Sweden",
            "value": "sweden",
          },
          Object {
            "feedback": Object {
              "type": "none",
              "value": "",
            },
            "label": "Iceland",
            "value": "iceland",
          },
          Object {
            "feedback": Object {
              "type": "none",
              "value": "",
            },
            "label": "Norway",
            "value": "norway",
          },
          Object {
            "correct": true,
            "feedback": Object {
              "type": "none",
              "value": "",
            },
            "label": "Finland",
            "value": "finland",
          },
        ],
        "choicesLayout": "vertical",
        "configure": Object {},
        "feedbackEnabled": false,
        "gridColumns": 2,
        "lockChoiceOrder": true,
        "partialScoring": false,
        "prompt": "Which of these northern European countries are EU members?",
        "promptEnabled": true,
        "rationale": "",
        "rationaleEnabled": true,
        "scoringType": "auto",
        "selectedAnswerBackgroundColor": "initial",
        "studentInstructionsEnabled": true,
        "teacherInstructions": "",
        "teacherInstructionsEnabled": true,
        "toolbarEditorPosition": "bottom",
      }
    }
    onAddChoice={[Function]}
    onChangeModel={[Function]}
    onChoiceChanged={[Function]}
    onConfigurationChanged={[MockFunction]}
    onModelChanged={[MockFunction]}
    onPromptChanged={[Function]}
    onRemoveChoice={[Function]}
    onTeacherInstructionsChanged={[Function]}
  />
</Fragment>
`;
